--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.2.0",
+    "nodemon": "^2.0.20",
     "vue": "^3.2.41",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
     "sass": "^1.56.1",
-    "vite": "^3.2.3"
+    "vite": "^3.2.3",
+    "vite-plugin-mix": "^0.4.0"
   }
 }
