--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.2.0",
+    "express": "^4.18.2",
     "nodemon": "^2.0.20",
     "vue": "^3.2.41",
     "vue-router": "^4.1.6"
